# ct-reconstruction-foundations

./: README.md  main.py  pyproject.toml
notebooks/: 01_visualizing_phyiscs.ipynb  02_artifacts_and_limitations.ipynb
src/: main.py
src/physics/: ct_ops.py  manual_projections.py  operations.py
src/utils/: metrics.py
tests/: test_physics.py
