[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computedtomography"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/physics", "src/utils"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]